# markers

./: .gitignore  CHANGELOG.md  LICENSE  Markers.cabal  README.md  example.html  example.mks
.github/: FUNDING.yml
app/: Main.hs
resources/: documentation.html  documentation.md
resources/js/: polyfill.js
resources/tests/: academic.html  academic.md  euler.html  euler.md  references.html  references.md
src/: Markers.hs  Parser.hs  To.hs
src/Ast/: AbstractSyntaxTree.hs  Body.hs  Helpy.hs  Math.hs  MetaSection.hs  Preferences.hs  TextTag.hs
src/Converter/: Abnt.hs  Helpers.hs  Math.hs  To.hs
src/Converters/: ToAbnt.hs  ToHtml.hs  ToLegacy.hs
src/Helpers/: Abnt.hs  General.hs  Helpers.hs  Math.hs
src/Language/Euler/: Env.hs  Parser.hs  Symbols.hs
src/Language/Euler/Ast/: Block.hs  Expr.hs
src/Language/Euler/Converter/: Html.hs
src/Language/Markers/: Math.hs
src/Language/Markers/Ast/: Content.hs  Text.hs  Tree.hs  Types.hs
src/Language/Markers/Converter/: Abnt.hs  Html.hs
src/Language/Markers/Parser/: Content.hs  Document.hs  Meta.hs  Text.hs
src/Parsers/: AllTags.hs  HelperTags.hs  MainTags.hs  Paragraphs.hs  PreferenceTags.hs  Types.hs
